--- a/css/styles.css
+++ b/css/styles.css
@@ -38,6 +38,7 @@ span{
     font-family: 'Sorts Mill Goudy', serif;
     font-family: italic;
     font-size: 1.5rem;
+    margin-bottom: 15px;
 }
 
 .header{
